<resources>
    <string name="app_name">E-Com Cart</string>
    <string name="no_internet">Check your internet connection</string>
    <string name="search_hint">Search</string>
    <string name="products">Products</string>
    <string name="no_results_found">No Results Found</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="no_item_in_cart">No Items in Cart</string>
    <string name="shop_now">Shop Now</string>
    <string name="add">ADD</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
</resources>