<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.manimaran.ecomcart.utils.DataBindingUtils"/>

        <import type="android.view.View" />

        <variable
            name="product"
            type="com.manimaran.ecomcart.databases.entities.Product" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_margin_start"
        android:layout_marginEnd="@dimen/item_margin_end"
        android:layout_marginBottom="@dimen/item_margin_bottom"
        android:background="@drawable/bg_border"
        app:cardBackgroundColor="@color/white"
        tools:context=".ui.home.HomeActivity">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgProduct"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/item_margin_bottom"
            android:padding="0.5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/loading_image"
            android:background="@drawable/bg_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/layoutAbout"
            app:layout_constraintDimensionRatio="2:2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/layoutAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/recycler_padding_side"
            android:paddingEnd="@dimen/recycler_padding_side"
            android:paddingBottom="@dimen/recycler_padding_top"
            app:layout_constraintBottom_toBottomOf="@id/imgProduct">

            <RelativeLayout
                android:id="@+id/layoutInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@{product.name}"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtName"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/price_top_padding"
                    android:textAlignment="center"
                    android:text="@{DataBindingUtils.INSTANCE.getProductPrice(product.price, product.specialPrice)}"
                    android:textSize="@dimen/text_small" />


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layoutCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/cart_controls_height"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnAddCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/cart_add_padding_top"
                    android:paddingEnd="@dimen/cart_add_padding_top"
                    android:paddingTop="@dimen/cart_add_padding_side"
                    android:paddingBottom="@dimen/cart_add_padding_side"
                    android:layout_centerInParent="true"
                    android:text="@string/add"
                    android:visibility="@{product.count > 0? View.GONE : View.VISIBLE}"
                    android:textSize="@dimen/text_x_normal"
                    android:background="@drawable/bg_cart" />

                <RelativeLayout
                    android:id="@+id/layoutCartAction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerInParent="true"
                    android:visibility="@{product.count > 0? View.VISIBLE : View.GONE}">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btnMinus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/cart_change_padding_top"
                        android:paddingEnd="@dimen/cart_change_padding_top"
                        android:paddingTop="@dimen/card_change_padding_side"
                        android:paddingBottom="@dimen/card_change_padding_side"
                        android:textSize="@dimen/text_x_normal"
                        android:text="@string/minus"
                        android:textAlignment="center"
                        android:layout_centerVertical="true"
                        tools:ignore="RelativeOverlap"
                        android:layout_toStartOf="@+id/txtCount"
                        android:background="@drawable/bg_cart" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:paddingStart="@dimen/cart_item_count_padding"
                        android:paddingEnd="@dimen/cart_item_count_padding"
                        android:text="@{String.valueOf(product.count)}"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_x_normal"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btnPlus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/cart_change_padding_top"
                        android:paddingEnd="@dimen/cart_change_padding_top"
                        android:paddingTop="@dimen/card_change_padding_side"
                        android:paddingBottom="@dimen/card_change_padding_side"
                        android:textSize="@dimen/text_x_normal"
                        android:text="@string/plus"
                        android:textAlignment="center"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/txtCount"
                        android:background="@drawable/bg_cart" />

                </RelativeLayout>

            </RelativeLayout>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

